<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MainActivity" >


    <RelativeLayout 
        	android:id="@+id/lay2" 
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:orientation="horizontal" >

               <TextView
        android:id="@+id/porttitle" 
        android:text="@string/str_led"
        android:layout_height="45dp"
        android:background="@drawable/tab"
        android:layout_width="fill_parent"   
        android:textSize="20sp" 
  	    android:textColor="#000000" 
        android:gravity="center"
      />
                                             
    </RelativeLayout>     
    
    <RelativeLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dip"
        android:layout_marginLeft ="10.0dip"
		android:layout_marginRight ="10.0dip" 
        android:layout_below="@id/lay2"
     >
               
                <TextView
        android:id="@+id/port1"
        android:layout_width="88dip"
        android:layout_height="44.0dip"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" 
             android:text="@string/port1"
        android:textSize="24sp" />
            
                        <Switch
                android:id="@+id/port_switch1"
        android:layout_width="wrap_content"
        android:layout_height="44.0dip"
        android:layout_alignBottom="@id/port1"
                android:layout_alignParentRight="true" 
              />       
        
                <TextView
        android:id="@+id/port2"
        android:layout_width="88dip"
        android:layout_height="44.0dip"
            android:layout_below="@id/port1"
                android:layout_alignLeft="@id/port1"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" 
             android:text="@string/port2"
        android:textSize="24sp" />
            
                        <Switch
                android:id="@+id/port_switch2"
        android:layout_width="wrap_content"
        android:layout_height="44.0dip"
        android:layout_alignBottom="@id/port2"
                android:layout_alignParentRight="true" 
              />           
        
                 <TextView
        android:id="@+id/port3"
        android:layout_width="88dip"
        android:layout_height="44.0dip"
            android:layout_below="@id/port2"
                android:layout_alignLeft="@id/port2"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" 
             android:text="@string/port3"
        android:textSize="24sp" />
            
                        <Switch
                android:id="@+id/port_switch3"
        android:layout_width="wrap_content"
        android:layout_height="44.0dip"
        android:layout_alignBottom="@id/port3"
                android:layout_alignParentRight="true" 
              />  
              
                 <TextView
        android:id="@+id/port4"
        android:layout_width="88dip"
        android:layout_height="44.0dip"
            android:layout_below="@id/port3"
                android:layout_alignLeft="@id/port3"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" 
             android:text="@string/port4"
        android:textSize="24sp" />
            
                        <Switch
                android:id="@+id/port_switch4"
        android:layout_width="wrap_content"
        android:layout_height="44.0dip"
        android:layout_alignBottom="@id/port4"
                android:layout_alignParentRight="true" 
              />                        
            </RelativeLayout>
            
 
 
</RelativeLayout>